test/simple/ill-typed/singletype_bool_int.caprice
(* TEST
  include refutable;
*)


let t : singleton bool = int
